force-app/main/default/objects/Quality_Gate_Rule__c/Quality_Gate_Rule__c.object-meta.xml
<CustomObject>
    <label>Quality Gate Rule</label>
    <nameField>
        <label>Quality Gate Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Gate Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>