force-app/main/default/objects/Quality_Gate_Rule__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <inlineHelpText>Select the Copado Action to which this Quality Gate Rule will be applied to.</inlineHelpText>
    <label>Copado Actions</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Execution_sequence__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Copado_Actions</valueSetName>
    </valueSet>
</CustomField>