force-app/main/default/objects/Quality_Gate_Rule__c/fields/ActionsList__c.field-meta.xml
<CustomField>
    <fullName>ActionsList__c</fullName>
    <formula>IF(INCLUDES(Actions__c , &quot;Promotion&quot; ), &quot;Promotion; &quot;,null) &amp;
IF(INCLUDES(Actions__c , &quot;PromotionDeployment&quot; ), &quot;Promotion Deployment; &quot;,null) &amp;
IF(INCLUDES(Actions__c , &quot;Commit&quot; ), &quot;Commit; &quot;,null) &amp;
IF(INCLUDES(Actions__c , &quot;PackageCreation&quot; ), &quot;Package Creation; &quot;,null) &amp;
IF(INCLUDES(Actions__c , &quot;PackageDistribution&quot; ), &quot;Package Distribution; &quot;,null)</formula>
    <label>Copado Actions List</label>
    <type>Text</type>
</CustomField>