force-app/main/default/objects/Quality_Gate_Rule__c/fields/dataJson__c.field-meta.xml
<CustomField>
    <fullName>dataJson__c</fullName>
    <label>dataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>