force-app/main/default/objects/Quality_Gate_Rule__c/fields/Execution_sequence__c.field-meta.xml
<CustomField>
    <fullName>Execution_sequence__c</fullName>
    <inlineHelpText>Define when, during runtime, a quality gate rule should be evaluated for the action selected.</inlineHelpText>
    <label>Execution Sequence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>