force-app/main/default/objects/Quality_Gate_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Identifies the type of quality gate related to the selected tool.</description>
    <inlineHelpText>Identifies the type of quality gate related to the selected tool.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>